<resources>

    <string name="app_name">TicketToRide</string>
    <string name="pass">Password</string>
    <string name="userName">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginpicDescription">Ticket To Ride</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="startGame">Start Game</string>
    <string name="statusLayout">Player:\tPoints:\tTrains:\tCards:\t\tDest:</string>
    <string name="resourceCardEndTurn">End Turn</string>
    <string name="resourceCardButton">Draw Resource Card</string>
    <string name="turnStartOptionButton">Player Option</string>
    <string name="turnStartOptionResourceCard">Resource Card</string>
    <string name="turnStartOptionDestinationCard">Destination Card</string>
    <string name="turnStartOptionClaimRoute">Claim Route</string>
    <string name="gameover">GAME OVER</string>
    <string name="gameoverinfo"> Longest Route held by XXX from XXX to XXX for X points!</string>
    <string name="resourceCardCount">Resource Cards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
