<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.views.TurnStartOptionFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/turnStartOptionResourceCard"
        android:text="@string/turnStartOptionResourceCard"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/turnStartOptionDestinationCard"
        android:text="@string/turnStartOptionDestinationCard"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/turnStartOptionClaimRoute"
        android:text="@string/turnStartOptionClaimRoute"/>
</LinearLayout>